# BSplineFitting

./: .gitignore  README.md
SplineFitting/: CMakeLists.txt  demo.py  main.cpp  py_interface.h  py_module.cpp  read_write_asc.cpp  setup.py.in
SplineFitting/core/: cubic_b_spline.cpp  cubic_b_spline.h  spline_curve_fitting.cpp  spline_curve_fitting.h
